--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
   },
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "start": "node server.js"
   },
   "private": true,
   "dependencies": {
