--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
   },
   "private": true,
   "dependencies": {
-   
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.7.3",
     "multer": "^1.4.3",
+    "reflect-metadata": "^0.1.13",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.1.6"
-   
+   "typeorm": "^0.3.11"
   }
  
 }
