--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "multer": "^1.4.3",
     "reflect-metadata": "^0.1.13",
     "swagger-jsdoc": "^6.1.0",
-    "swagger-ui-express": "^4.1.6"
+    "swagger-ui-express": "^4.1.6",
    "typeorm": "^0.3.11"
   }
  
